# snek-template

./: .bumpversion.cfg  .gitignore  .travis.yml  .verchew.ini  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  dodo.py  doit.cfg  mkdocs.yml  pyproject.toml  tasks.txt  tox.ini
.circleci/: config.yml
docs/: tasks.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py  test_dodo.py  test_snek_template.py  test_template.py  utils.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .travis.yml  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dodo.py  extra_context.j2  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/docs/: conf.py  coverage.md  index.rst  license.md  tasks.md
{{cookiecutter.project_slug}}/docs/api/: your_project_name.rst
{{cookiecutter.project_slug}}/sphinx/: conf.py  coverage.rst  index.rst  tasks.md  tasks.rst
{{cookiecutter.project_slug}}/sphinx/api/: index.rst
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.project_slug}}.py
