[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.6 || ~2.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
isort = "^4.3"
pydocstyle = "^3.0"
pytest = "^4.0"
pytest-cookies = "^0.3.0"
pytest-cov = "^2.6"
verchew = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

