[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6 || ^2.7.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
isort = "^4.3"
pydocstyle = "^3.0"
pytest = "^4.0"
pytest-cookies = "^0.3.0"
pytest-cov = "^2.6"
{% if cookiecutter.docs_generator == "Sphinx" %}sphinx = "^1.8"
sphinx_bootstrap_theme = "^0.6.5"
livereload = "^2.6"
singledispatch = "^3.4"
backports_abc = "^0.5.0"
{% else %}mkdocs = "^1.0"
markdown_include = "^0.5.1"
{% endif %}tox = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

